--- a/index.html
+++ b/index.html
@@ -102,10 +102,12 @@
   <div class="cloud"></div>
   <div class="cloud"></div>
 
-  <h1>Hey Joy! 🌈</h1>
-  <p>You are stronger, brighter, and more amazing than you think!  
-  Whatever’s weighing you down today will soon pass.  
-  Keep smiling — the world shines a little more when you do 💖</p>
+  <h1>Hey Joy! 💜</h1>
+  <p>I want to remind you that you are stronger and more amazing than you think!
+  Everything that’s weighing you down the last few days will soon pass.
+  You are never alone, and I'm always here for you. 
+  Keep smiling — the world shines a little more when you do. 
+   Love you, Swiss Cheese 💖 </p>
 
   <div class="heart">💗</div>
 </body>
