--- a/index.html
+++ b/index.html
@@ -106,8 +106,7 @@
   <p>I want to remind you that you are stronger and more amazing than you think!
   Everything that’s weighing you down the last few days will soon pass.
   You are never alone, and I'm always here for you. 
-  Keep smiling — the world shines a little more when you do. 
-   Love you, Swiss Cheese 💖 </p>
+  Keep smiling — the world shines a little more when you do. Love you, Swiss Cheese 💖 </p>
 
   <div class="heart">💗</div>
 </body>
